# Rust-Zero-To-Production

./: Cargo.toml  Dockerfile  spec.yaml
.github/workflows/: general.yml
configuration/: base.yaml  development.yaml  production.yaml
migrations/: 20240512142258_create_subscriptions_table.sql  20240605065820_cascade_update_subscription_tokens_subscriber_id.sql
src/: configuration.rs  email_client.rs  lib.rs  main.rs  startup.rs  telemetry.rs
src/routes/: confirm_subscriptions.rs  mod.rs  newsletters.rs  subscriptions.rs
src/types/: mod.rs  subscriber.rs  subscriber_email.rs  subscriber_name.rs
src/types/templates/: confirmation_email_template.rs  mod.rs
tests/: health_check.rs
tests/api/: confirm_subscriptions.rs  health_check.rs  helpers.rs  main.rs  newsletter.rs  subscriptions.rs
