[package]
name = "zero2prod"
version = "0.1.0"
authors = [ "Ferran Palma <ferranpalmac@gmail.com>" ]
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "zero2prod"

[dependencies]
actix-web = "4"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
serde = { version = "1", features = ["derive"] }
serde-aux = "4.5"
config = { version= "0.14.0", default-features = false, features = ["yaml"] }
uuid = { version = "1.8", features = ["v4"] }
chrono = { version = "0.4.38", default-features = false, features = ["clock"] }
log = "0.4"
tracing = { version = "0.1.4", features = ["log"] }
tracing-log = "0.2"
tracing-subscriber = { version = "0.3.18", features = ["registry", "env-filter"] }
tracing-bunyan-formatter = "0.3.9"
tracing-actix-web = "0.7"
secrecy = { version = "0.8", features = ["serde"] }
unicode-segmentation = "1.11.0"
validator = "0.18"

[patch.crates-io]
config = { git = 'https://github.com/mehcode/config-rs.git'}

[dependencies.sqlx]
version = "0.7"
default-features = false
features = [
    "runtime-tokio-rustls",
    "macros",
    "postgres",
    "uuid",
    "chrono",
    "migrate",
]

[dev-dependencies]
reqwest = "0.12"
once_cell = "1.19"
claims = "0.7"
fake = "2.9.2"
quickcheck = "1"
quickcheck_macros = "1"
